<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MotionAuth</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="title_activity_regist_name_input">RegistNameInput</string>
    <string name="name_input">あなたの名前を入力してください</string>
    <string name="OK">OK</string>
    <string name="title_activity_regist_motion">RegistMotion</string>
    <string name="please_read">さん読んでね！！</string>
    <string name="one">①</string>
    <string name="description1">モーションデータ取得ボタンを押すと，３秒間の準備時間の後，スマートフォンの動きを取得し始めます．3秒間でお好きな動きをどうぞ</string>
    <string name="two">②</string>
    <string name="regist_description2">データ取得は3回行います．データ取得が正常に完了すれば，登録は終了です．</string>
    <string name="auth_description2">データ取得は1回行います．</string>
    <string name="three">③</string>
    <string name="description3">データ取得完了後，認証を行います．</string>
    <string name="ato">あと</string>
    <string name="count">回</string>
    <string name="third">3</string>
    <string name="first">1</string>
    <string name="hoge">hoge</string>
    <string name="getData">モーションデータ取得</string>
    <string name="title_activity_auth_name_input">AuthNameInput</string>
    <string name="title_activity_auth_motion">AuthMotion</string>
    <string name="title_activity_registrant_list">RegistrantList</string>
    <string name="title_activity_view_registed_data">ViewRegistedData</string>
    <string name="change_range_value">増幅器の閾値調整</string>
    <string name="title_activity_view_registed_rdata">ViewRegistedRData</string>
    <string name="reset">リセット</string>
    <string name="title_activity_view_auth_rdata">ViewAuthRData</string>
    <string name="text">text</string>

</resources>
